syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting{
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest{
  Greeting greeting = 1;
}

message GreetResponse{
  string result = 1;
}

message GreetManyTimesRequest{
  Greeting greeting = 1;
}

message GreetManyTimesResponse{
  string result = 1;
}

message GreetEveryoneRequest{
  Greeting greeting = 1;
}

message GreetEveryoneResponse{
  string result = 1;
}

message LongGreetRequest{
  Greeting greeting = 1;
}

message LongGreetResponse{
  string result = 1;
}

message GreetWithDdlRequest{
  Greeting greeting = 1;
}

message GreetWithDdlResponse{
  string result = 1;
}

service GreetService{
  //unary
  rpc Greet(GreetRequest) returns (GreetResponse){};
  //server streaming api
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};
  //client streaming api
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};
  //Bi-directional streaming api
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){};

  //rpc with ddl
  //this rpc will complete in no less than 300s
  rpc GreetWithDdl(GreetWithDdlRequest) returns (GreetWithDdlResponse);
}